# dp-statsmodels

./: README.md  pyproject.toml  review_analysis.md  review_summary.md
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/: intro.md  myst.yml  references.bib
docs/guides/: choosing_epsilon.md  reproducibility.md  setting_bounds.md  validation_servers.md
docs/paper/: dp_regression_paper.ipynb  index.md
dp_econometrics/: session.py
dp_econometrics/models/: fixed_effects.py
dp_statsmodels/: paper_results.py  session.py
dp_statsmodels/models/: ols.py
tests/: test_fixed_effects.py  test_ols.py  test_reproducibility.py
