[project]
name = "dp-statsmodels"
version = "0.1.0"
description = "Differentially private statistical models with valid inference - statsmodels-like API"
authors = [{name = "Max Ghenis", email = "max@policyengine.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Security :: Cryptography",
]
keywords = [
    "differential-privacy",
    "econometrics",
    "regression",
    "statistics",
    "privacy",
    "statsmodels",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docs = [
    "mystmd>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinxcontrib-bibtex>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/MaxGhenis/dp-statsmodels"
Documentation = "https://maxghenis.github.io/dp-statsmodels"
Repository = "https://github.com/MaxGhenis/dp-statsmodels"
Issues = "https://github.com/MaxGhenis/dp-statsmodels/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dp_statsmodels*"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "dp_statsmodels/tests"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=dp_statsmodels",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow",
]

[tool.coverage.run]
branch = true
source = ["dp_statsmodels"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
